test rework